Fix header hierarchy and percentage banner alignment on statistics page

--- a/src/modules/statistics/GoalSection.module.scss
+++ b/src/modules/statistics/GoalSection.module.scss
@@ -34,7 +34,8 @@
   }
 
   .current_percentage {
-    float: right;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .goal_amount {
