--- a/src/modules/statistics/Statistics.module.scss
+++ b/src/modules/statistics/Statistics.module.scss
@@ -34,13 +34,7 @@
 }
 
 .today {
-  margin-top: 8px;
-}
-
-.current_percentage_text {
-  float: right;
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 20px;
 }
 
 .circle_container {
